# gadgets

./: .gitignore
_cmake/: CMakeLists.txt  build.cmd  build.ps1  build.sh
_cmake/count_lines/: CMakeLists.txt
_cmake/process_dump/: CMakeLists.txt
_cmake/sln2slnx/: CMakeLists.txt
_meson/: .editorconfig  README.md  build_debug.ps1  build_debug.sh  build_release.ps1  build_release.sh  meson.build  meson_fmt.ps1
_meson/count_lines/: meson.build
_meson/process_dump/: meson.build
_meson/sln2slnx/: meson.build
_msvc/: count_lines.slnx  gadgets.slnx  process_dump.sln  process_dump.slnx  sln2slnx.slnx
_msvc/count_lines/: count_lines.vcxproj  count_lines.vcxproj.filters
_msvc/process_dump/: process_dump.vcxproj  process_dump.vcxproj.filters
_msvc/sln2slnx/: sln2slnx.vcxproj  sln2slnx.vcxproj.filters
_xmake/: .gitignore  README.md  xmake.lua
_xmake/count_lines/: xmake.lua
doc/: count_lines.md  process_dump.md  sln2slnx.md
src/_msvc/: count_lines.sln
src/_msvc/count_lines/: count_lines.vcxproj  count_lines.vcxproj.filters
src/count_lines/: count_lines.cpp
src/umutech/: .clang-format
src/umutech/count_lines/: count_lines.cpp
src/umutech/process_dump/: process_dump.cpp
src/umutech/sln2slnx/: sln2slnx.cpp
